--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
   "openai>=0.8.0",
   "pydantic>=2.12.2",
   "pydantic-settings>=2.11.0",
+  "tenacity>=9.1.2",
 ]
 
 [project.urls]
