--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ Homepage = "https://github.com/Fuji-no-yama/agent-template"
 
 [tool.ruff]
 select = ["ALL"]
-ignore = ["D", "S", "PTH", "RET", "ASYNC", "T201", "RUF"]
+ignore = ["D", "S", "PTH", "RET", "ASYNC", "T201", "RUF", "G004"]
 # D: ドックストリング関連
 # S: 安全規則関連(picklなど)
 # PTH: pathlib推奨
@@ -42,6 +42,7 @@ ignore = ["D", "S", "PTH", "RET", "ASYNC", "T201", "RUF"]
 # ASYNC: 非同期関連
 # T201: printの制限
 # RUF: カタカナの「ノ」の制約など
+# G004: loggerに対するf-string警告
 
 # 自動修正から除外したいルールを指定
 unfixable = ["F401", "E501"] # 例: 未使用importや行長制限など
