--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ Homepage = "https://github.com/Fuji-no-yama/agent-template"
 
 [tool.ruff]
 select = ["ALL"]
-ignore = ["D", "S", "PTH", "RET", "ASYNC", "T201", "RUF"]
+ignore = ["D", "S", "PTH", "RET", "ASYNC", "T201", "RUF", "G004"]
 # D: ドックストリング関連
 # S: 安全規則関連(picklなど)
 # PTH: pathlib推奨
