--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ line-length = 150
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["D", "S", "PTH", "RET", "ASYNC", "T201", "RUF", "G004"]
+ignore = ["D", "S", "PTH", "RET", "ASYNC", "T201", "RUF", "G004", "SLF001"]
 # D: ドックストリング関連
 # S: 安全規則関連(picklなど)
 # PTH: pathlib推奨
@@ -51,6 +51,7 @@ ignore = ["D", "S", "PTH", "RET", "ASYNC", "T201", "RUF", "G004"]
 # T201: printの制限
 # RUF: カタカナの「ノ」の制約など
 # G004: loggerに対するf-string警告
+# SLF001: クラス外部での_methodアクセスに対する警告(今回は公開ライブラリなため無視)
 
 # 自動修正から除外したいルールを指定
 unfixable = ["F401", "E501"] # 例: 未使用importや行長制限など
